@@ -40,7 +40,7 @@ Z* -------------------------------------------------------------------
 #define cPopUpCharLift 2
 
 #define cChildDelay 0.25
-#define cPassiveDelay 0.35
+#define cPassiveDelay 0.45
 #define cDirtyDelay 0.05
 
 typedef struct CPopUp {
